tests/fail/LogicalOr.java
package fail;

import java.lang.System;

public class LogicalOr {
    public static void main(String[] args){
        System.out.println("abc" || true);
    }
}